[gd_scene load_steps=5 format=3 uid="uid://d3o5db22figvn"]

[ext_resource type="Script" uid="uid://b1riqlb5fakem" path="res://scripts/level_mechanics/small_bullet.gd" id="1_vsgqt"]
[ext_resource type="Texture2D" uid="uid://do31jykrqc8ui" path="res://icon.svg" id="2_12rrm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_euwwl"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vsgqt"]
radius = 16.0

[node name="SmallBullet" type="CharacterBody2D"]
script = ExtResource("1_vsgqt")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25000003)
texture = ExtResource("2_12rrm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_euwwl")
disabled = true

[node name="BulletLifeTime" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_vsgqt")

[connection signal="timeout" from="BulletLifeTime" to="." method="_on_bullet_life_time_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
